--- a/psipl.cbp
+++ b/psipl.cbp
@@ -10,8 +10,12 @@
 				<Option output="bin/Debug/executable" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
-				<Option compiler="gcc" />
+				<Option compiler="gcc-mingw64" />
 				<Compiler>
+					<Add option="-pedantic" />
+					<Add option="-Wextra" />
+					<Add option="-Wall" />
+					<Add option="-std=c17" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
@@ -31,7 +35,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="lab1.c">
+		<Unit filename="lab1-1.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="lab1-2.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="lab1-3.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
